deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notejam
  template:
    metadata:
      labels:
        app: notejam
    spec:
      containers:
        - name: dj-notejam-container
          image: guestdev/django-notejam1:latest
          ports: 
            - containerPort: 8000
          imagePullPolicy: Always
---

apiVersion: v1
kind: Service
metadata: 
  name: notejam
spec: 
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: notejam
  type: NodePort
